tests/baselines/reference/APISample_WatchWithDefaults.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8926,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8926,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9186,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9186,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9536,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9536,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9560,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9560,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9647,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9647,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10812,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10812,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10823,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10823,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10833,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10833,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10908,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10908,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10965,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10965,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11019,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11019,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11039,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11039,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11049,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11049,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11083,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11083,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11090,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11090,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11108,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11108,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11134,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11134,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11137,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11137,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11149,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11149,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11179,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11179,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11213,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11213,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11224,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11224,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11248,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11248,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11256,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11256,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11260,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11260,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11290,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11290,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11333,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11333,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11520,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11520,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11522,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11522,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11526,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11526,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11528,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11528,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11530,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11530,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11532,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11532,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11534,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11534,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11553,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11553,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11555,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11555,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11561,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11561,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11581,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11581,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11583,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11583,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11585,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11585,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11587,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11587,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11589,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11589,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11591,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11591,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11593,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11593,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11595,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11595,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11597,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11597,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11669,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11669,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11671,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11671,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11673,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11673,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11675,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11675,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11751,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11751,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_WatchWithDefaults.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. This uses default sys interface without having to pass anything
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import ts = require("typescript");
    
    function watchMain() {
        const configPath = ts.findConfigFile(/*searchPath*/ "./", ts.sys.fileExists, "tsconfig.json");
        if (!configPath) {
            throw new Error("Could not find a valid 'tsconfig.json'.");
        }
    
        // TypeScript can use several different program creation "strategies":
        //  * ts.createEmitAndSemanticDiagnosticsBuilderProgram,
        //  * ts.createSemanticDiagnosticsBuilderProgram
        //  * ts.createAbstractBuilder
        // The first two produce "builder programs". These use an incremental strategy to only re-check and emit files whose
        // contents may have changed, or whose dependencies may have changes which may impact change the result of prior type-check and emit.
        // The last uses an ordinary program which does a full type check after every change.
        // Between `createEmitAndSemanticDiagnosticsBuilderProgram` and `createSemanticDiagnosticsBuilderProgram`, the only difference is emit.
        // For pure type-checking scenarios, or when another tool/process handles emit, using `createSemanticDiagnosticsBuilderProgram` may be more desirable.
    
        // Note that there is another overload for `createWatchCompilerHost` that takes a set of root files.
        const host = ts.createWatchCompilerHost(configPath, {}, ts.sys);
    
        // You can technically override any given hook on the host, though you probably don't need to.
        // Note that we're assuming `origCreateProgram` and `origPostProgramCreate` doesn't use `this` at all.
        const origCreateProgram = host.createProgram;
        host.createProgram = (rootNames, options, host, oldProgram) => {
            console.log("** We're about to create the program! **");
            return origCreateProgram(rootNames, options, host, oldProgram);
        }
        const origPostProgramCreate = host.afterProgramCreate;
    
        host.afterProgramCreate = program => {
            console.log("** We finished making the program! **");
            origPostProgramCreate!(program);
        };
    
        // `createWatchProgram` creates an initial program, watches files, and updates the program over time.
        ts.createWatchProgram(host);
    }
    
    watchMain();
    